--- a/app/templates/lente_modelo.html
+++ b/app/templates/lente_modelo.html
@@ -137,7 +137,7 @@
                 <div class="card-header">Imagen fondo (aplanado)</div>
                 <div class="card-body d-flex align-items-center justify-content-center" style="min-height:180px;">
                     {% if ar_model.path_to_img_bg_flattened %}
-                    <img src="{{ '/' ~ ar_model.path_to_img_temple_flattened.lstrip('/') }}" alt="Fondo aplanado" class="img-fluid">
+                    <img src="{{ '/' ~ ar_model.path_to_img_bg_flattened.lstrip('/') }}" alt="Fondo aplanado" class="img-fluid">
                     {% else %}
                     <span class="text-muted">Sin archivo</span>
                     {% endif %}
@@ -255,7 +255,7 @@
                 <textarea name="config_for_display" class="form-control" rows="6">{{ ar_model.config_for_display|tojson if ar_model.config_for_display else '' }}</textarea>
                 <div class="form-text">Pegá un JSON válido o dejá vacío.</div>
                 <div class="col-12 mb-3">
-                <a href="{{ url_for('main.glb_a_cara') }}" target="_blank" class="btn btn-info text-light btn-block">Helper para armarlo</a>
+                <a href="{{ url_for('main.glb_a_cara', model_id=ar_model.model_id) }}" target="_blank" class="btn btn-info text-light btn-block">Helper para armarlo</a>
                 </div>
             </div>
             </div>
