--- a/app/static/css/editar_producto.css
+++ b/app/static/css/editar_producto.css
@@ -49,6 +49,7 @@
     flex: 1;
     display: flex;
     padding: 20px;
+    height: 100%;
 }
 
 .contenido_izquierda{
@@ -57,6 +58,7 @@
     padding-right: 10px;
     padding-bottom: 10px;
     border-right: 1px solid var(--main-color);
+    height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -86,11 +88,17 @@
 
 .imagen_costado{
     margin: 20px;
+    flex: 0 0 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 60%;
 }
+
 
 .imagen_costado img {
   width: 100%;       
-  height: auto;        
+  height: 100%;     
   max-width: 400px;    
   display: block;      
   margin: 0 auto;      
@@ -100,22 +108,25 @@
 
 .botones_izquierda{
     display: flex;
+    flex: 0 0 30%;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-between;
     gap: 10px;
     width: 100%;
-    height: 30%; 
+    flex-shrink: 1;
+    max-height: 30%;
 }
 
 .boton_izq{
     width: 100%;
-  padding: 10px;
+  padding: 8px;
   border: none;
   background-color: var(--secondary-color);
   color:  var(--background-color);
   border-radius: 8px;
   display: inline-block;
+
 
   font-family: "Montserrat";
   font-size: larger;
